fix: session loading bugs and resolve all Sonar PR #483 violations
- Epoch date in session picker: ConversationReader.listSessions() now
  computes last_activity via COALESCE(ended_at, MAX turn timestamp,
  started_at) instead of reading the always-null ended_at column
- Chat pane empty after restart: JsonlToSqliteMigrator.discoverSessions()
  now always merges sessions-index.json entries with a directory scan,
  deduplicating by session ID so JSONL files not in the index are migrated
- Post-migration JSONL backup: successfully migrated session files are
  moved to a sessions-backup-jsonl/ sibling directory with a README.txt
  explaining they are safe to delete

Sonar fixes (all 27 violations on PR #483):
- SessionStoreV2: S3776 cognitive complexity (extracted parseSessionIndexEntry),
  S135 switch/for nesting, S1192 duplicate string literals (KEY_AGENT,
  KEY_CREATED_AT constants), S6213 'record' restricted identifier
- HistoryContextWindow.kt: S6524 x9 — added explicit List<T> annotations
  to prevent platform-type MutableList inference; added missing EntryData import
- ConversationReader: S1488 temp variable (return directly), S1172 unused
  sessionId param in addTurnStatsIfPresent; removed now-dead loadSessionIdForTurn
- AcpClient: S1172 unused cwd param in tryBranchSessionAtStartup/branchCurrentSession
- BackfillMiner: S1612 lambda → method ref, S1854 unused basePath variable
- SearchConversationHistoryTool: S1172 unused basePath param
- TurnStatisticsBackfill, ToolCallStatisticsBackfill: S1874 deprecated
  ExportUtils.sessionsDir(String) replaced with direct File construction
- UsageStatisticsLoader: S1854 unused basePath, S1874 deprecated sessionsDir
- SessionSwitchService: S1874 deprecated sessionsDir wrapper inlined
- ConversationDatabaseTest: S5976 — 3 identical @Test methods collapsed into
  @ParameterizedTest @ValueSource

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>